force-app/main/default/objects/Company__c.object
<CustomObject>
    <fields>
        <fullName>Age_over__c</fullName>
        <label>No of Emps over 55</label>
        <summaryFilterItems>
            <field>Employee__c.Age__c</field>
            <operation>greaterThan</operation>
            <value>55</value>
        </summaryFilterItems>
        <summaryForeignKey>Employee__c.Employed_By__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_Experience__c</fullName>
        <formula>Sum_of_Exp__c  /  Total_No_of_Emps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Experience_among_all_Emps__c</fullName>
        <label>Max Experience among all Emps</label>
        <summarizedField>Employee__c.Experience__c</summarizedField>
        <summaryForeignKey>Employee__c.Employed_By__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Exp__c</fullName>
        <label>Sum of Exp</label>
        <summarizedField>Employee__c.Experience__c</summarizedField>
        <summaryForeignKey>Employee__c.Employed_By__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Emps__c</fullName>
        <label>Total No of Emps</label>
        <summaryForeignKey>Employee__c.Employed_By__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Employees__c</fullName>
        <label>Total Number of Employees</label>
        <summaryForeignKey>Employee__c.Employed_By__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Non-IT</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>